--- a/FRC-2018/.classpath
+++ b/FRC-2018/.classpath
@@ -9,5 +9,8 @@
 	<classpathentry kind="var" path="wpiutil" sourcepath="wpiutil.sources"/>
 	<classpathentry kind="var" path="USERLIBS_DIR/CTRE_Phoenix-sources.jar"/>
 	<classpathentry kind="var" path="USERLIBS_DIR/CTRE_Phoenix.jar"/>
+	<classpathentry kind="lib" path="/Users/walden/Downloads/CTRE_Phoenix_FRCLibs_NON-WINDOWS_v5.2.1.1/java/lib/CTRE_Phoenix.jar"/>
+	<classpathentry kind="lib" path="/Users/walden/Downloads/CTRE_Phoenix_FRCLibs_NON-WINDOWS_v5.2.1.1/java/lib/CTRE_Phoenix-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/walden/Downloads/navx-mxp-libs/roborio/java/lib/navx_frc.jar" sourcepath="/Users/walden/Downloads/navx-mxp-libs/roborio/java/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
