--- a/FRC-2018/.classpath
+++ b/FRC-2018/.classpath
@@ -11,11 +11,8 @@
 	<classpathentry kind="var" path="opencv" sourcepath="opencv.sources"/>
 	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
 	<classpathentry kind="var" path="wpiutil" sourcepath="wpiutil.sources"/>
-	<classpathentry kind="var" path="USERLIBS_DIR/CTRE_Phoenix-sources.jar"/>
-	<classpathentry kind="var" path="USERLIBS_DIR/CTRE_Phoenix.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://www.ctr-electronics.com/downloads/api/java/html/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar"/>
+	<classpathentry kind="lib" path="/Users/walden/Workspace/FRC-2018-Team-4026-LongArm/FRC-2018/navxLibs/lib/navx_frc.jar"/>
+	<classpathentry kind="lib" path="/Users/walden/Workspace/FRC-2018-Team-4026-LongArm/FRC-2018/CTRElib/lib/CTRE_Phoenix.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
